--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,7 +3,7 @@
 @import 'mixins/mixins';
 
 :root {
-  font-size: 16px;
+  font-size: $rem;
   font-family: $font-family-main;
   font-weight: 500;
 }
